--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="content__cards">
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -98,7 +98,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -113,7 +113,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -128,7 +128,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -143,7 +143,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -158,7 +158,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -173,7 +173,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -188,7 +188,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
@@ -203,7 +203,7 @@
           </div>
 
           <div class="content__card">
-            <img src="/img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
+            <img src="./img/card-photo.jpg" alt="фотоаппарт" class="content__card-img">
             <div class="content__card-box">
               <h2 class="content__card-title">
                 Наименование товара
